// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <SectionHeader
    isOpen={false}
    isTransparent={false}
    text="foo"
  >
    <h2
      className="section-header orion-fusion-theme"
      tabIndex="0"
    >
      <div
        aria-expanded={false}
        aria-label="foo"
        className="arrange-wrapper"
        role="button"
        tabIndex="-1"
      >
        <Arrange
          className="title-arrange"
          fill={
            <span
              aria-hidden={false}
              className="title"
            >
              foo
            </span>
          }
        >
          <div
            className="arrange title-arrange"
          >
            <div
              className="fit"
            />
            <div
              className="fill"
            >
              <span
                aria-hidden={false}
                className="title"
              >
                foo
              </span>
            </div>
            <div
              className="fit"
            />
          </div>
        </Arrange>
      </div>
    </h2>
  </SectionHeader>
</ThemeContextProvider>
`;

exports[`SectionHeader should render a default component 1`] = `
<h2
  className="section-header"
  tabIndex="0"
>
  <div
    aria-expanded={false}
    aria-label="foo"
    className="arrange-wrapper"
    role="button"
    tabIndex="-1"
  >
    <Arrange
      className="title-arrange"
      fill={
        <span
          aria-hidden={false}
          className="title"
        >
          foo
        </span>
      }
    />
  </div>
</h2>
`;

exports[`SectionHeader should render with an accordion icon in the open position when an 'onClick()' callback and 'isOpen' is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <div
    aria-expanded="true"
    aria-label="foo"
    class="arrange-wrapper"
    role="button"
    tabindex="-1"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon is-open"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
</h2>
`;

exports[`SectionHeader should render with an accordion icon when an 'onClick()' callback is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <div
    aria-expanded="false"
    aria-label="foo"
    class="arrange-wrapper"
    role="button"
    tabindex="-1"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
</h2>
`;

exports[`SectionHeader should render without an accordion icon when no 'onClick()' is passed 1`] = `
<h2
  class="section-header"
  tabindex="0"
>
  <div
    aria-expanded="false"
    aria-label="foo"
    class="arrange-wrapper"
    role="button"
    tabindex="-1"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      />
      <div
        class="fill"
      >
        <span
          aria-hidden="false"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
</h2>
`;
